# LoopsEnginePOC

./: .gitignore  settings.gradle
Android-lib/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  LoopsEngine.cpp  LoopsEngine.h  MyDataCallback.cpp  MyDataCallback.h  OboeEngine.cpp  OboeEngine.h
app/src/main/cpp/SoundTouch/: SoundTouch.cpp
app/src/main/kotlin/loops/: LoopsEngine.kt  MainActivity.kt  MainApplication.kt
app/src/main/kotlin/loops/android/: SensorsProxy.kt
app/src/main/kotlin/loops/koin/: KoinModules.kt
app/src/main/kotlin/loops/soundtouch/: Setting.kt  SoundTouch.kt
app/src/main/kotlin/loops/ui/: ComposeTools.kt  Navigator.kt
app/src/main/kotlin/loops/ui/screens/: LoopsView.kt  (+7 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main_original_example/: AndroidManifest.xml
app/src/main_original_example/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main_original_example/res/values/: strings.xml  themes.xml
app/src/main_original_example/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
iolib/: build.gradle
iolib/src/main/cpp/: CMakeLists.txt
iolib/src/main/cpp/player/: OneShotSampleSource.cpp  OneShotSampleSource.h  PhaseVocoder.cpp  PhaseVocoder.h  SampleBuffer.cpp  SampleBuffer.h  SampleSource.h  SimpleMultiPlayer.cpp  SimpleMultiPlayer.h
parselib/: build.gradle
parselib/src/main/cpp/wav/: WavStreamReader.cpp  WavStreamReader.h
soundtouch/: build.gradle
soundtouch/jni/: soundtouch-jni.cpp
(+10 files in other folders)
